bitfields/tests/compile_error_cases/errors/bitfield_field_duplicate_name.rs
use bitfields::bitfield;

#[bitfield(u16)]
pub struct Bitfield {
    a: u8,
    a: u8,
}

fn main() {}
